--- a/CMFileManager/res/values-zh-rCN/strings.xml
+++ b/CMFileManager/res/values-zh-rCN/strings.xml
@@ -649,6 +649,10 @@
   <!-- Welcome Dialog * Message -->
   <string name="welcome_msg">
     欢迎您使用 CyanogenMod 文件管理器.
+    \n\n修改者声明：
+    \n\n您使用的此版本由gfan.com的wwuuwu修改，只增加列表（不包含网格模式）返回历史位置记录，如果因此而增加毁坏性Bug，建议立即卸载，使用原版。
+    \n\n此版本只用于测试交流，由于软件不可避免存在Bug，由此带来的后果，修改者不负任何责任。
+    \n\nCyanogenMod原声明：
     \n\n本程序将会允许您浏览设备的文件系统并做出可能导致损伤的操作. 为了避免损伤, 此程序默认将会在低权限与安全的模式下开始运行.
     \n\n您可以通过设置切换到高级并拥有完全控制的模式. 确保操作不会损坏系统与它的安全性将是您的责任.
     \n\nCyanogenMod 团队.</string>
